# raspico_template

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  main.c
